--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 @import "tailwindcss";
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark, cupcake;
+}
+
+@layer base {
+  body {
+    font-family: "Poppins", sans-serif;
+  }
 }
